--- a/index.html
+++ b/index.html
@@ -1,25 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test Website</title>
-  <!-- Add GTM Header Snippet Below -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id=' + i + dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-PBRG3HBL');</script>
-  <!-- End Google Tag Manager -->
+    <title>Beginner-Friendly Flowchart for Google Analytics and GTM</title>
+    <style>
+        .flowchart {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            text-align: center;
+        }
+        .section {
+            border: 1px solid #ccc;
+            margin: 20px auto;
+            padding: 10px;
+            width: 80%;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
+        .step {
+            padding: 10px;
+            border: 1px solid #aaa;
+            margin: 5px auto;
+            border-radius: 5px;
+            width: 60%;
+            background-color: #fff;
+        }
+        .arrow {
+            font-size: 24px;
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
-  <!-- Add GTM Body Snippet Below -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PBRG3HBL"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager -->
-  
-  <h1>Welcome to My Demo Website</h1>
-  <p>This is a test page for Google Tag Manager.</p>
+
+<div class="flowchart">
+    <h1>Beginner-Friendly Flowchart for Google Analytics and GTM Setup</h1>
+
+    <!-- Section 1: Google Analytics Setup -->
+    <div class="section">
+        <h2>1. Google Analytics Setup</h2>
+        <div class="step">Create a Google Analytics Account</div>
+        <div class="arrow">&#8595;</div>
+        <div class="step">Set up a GA4 Property</div>
+        <div class="arrow">&#8595;</div>
+        <div class="step">Add GA4 Tracking Code to Your Website</div>
+        <div class="arrow">&#8595;</div>
+        <div class="step">Verify Tracking Using DebugView</div>
+    </div>
+
+    <!-- Section 2: Google Tag Manager Setup -->
+    <div class="section">
+        <h2>2. Google Tag Manager (GTM) Setup</h2>
+        <div class="step">Create a GTM Account</div>
+        <div class="arrow">&#8595;</div>
+        <div class="step">Link GTM to Google Analytics</div>
+        <div class="arrow">&#8595;</div>
+        <div class="step">Define Tags and Triggers</div>
+        <div class="arrow">&#8595;</div>
+        <div class="step">Preview, Test, and Publish Tags</div>
+    </div>
+
+    <!-- Section 3: Cross-Domain Tracking Setup -->
+    <div class="section">
+        <h2>3. Cross-Domain Tracking</h2>
+        <div class="step">Adjust GA4 Settings for Cross-Domain Tracking</div>
+        <div class="arrow">&#8595;</div>
+        <div class="step">Enable Cross-Domain Linking in GTM</div>
+        <div class="arrow">&#8595;</div>
+        <div class="step">Validate Cross-Domain Tracking Setup</div>
+    </div>
+
+    <!-- Section 4: Mobile App Analytics -->
+    <div class="section">
+        <h2>4. Mobile App Analytics</h2>
+        <div class="step">Integrate Firebase SDK into Android/iOS Apps</div>
+        <div class="arrow">&#8595;</div>
+        <div class="step">Link Firebase with Google Analytics</div>
+        <div class="arrow">&#8595;</div>
+        <div class="step">Track and Validate Events in Firebase</div>
+    </div>
+</div>
+
 </body>
 </html>
+
 
